--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     
 <script src="game.js" type="text/javascript"></script>
+<script src="gesture.js" type="text/javascript"></script>
+<script src="player.js" type="text/javascript"></script>
+
 </body>
 </html>
